catkin_ws/logs/iq_gnc/build.make.625.log.stderr
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp: In function ‘geometry_msgs::TwistStamped vel_control_input(geometry_msgs::Vector3Stamped*, float, int)’:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:724:2: error: ‘kp’ was not declared in this scope; did you mean ‘k’?
  724 |  kp = 1;
      |  ^~
      |  k
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:725:2: error: ‘kd’ was not declared in this scope; did you mean ‘k’?
  725 |  kd = 1;
      |  ^~
      |  k
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:732:49: error: ‘force_error’ was not declared in this scope
  732 |  velocityOutput.twist.linear.x = (kp + kd/Ts) * force_error[k].vector.x - (kp/Ts) * force_error[0].vector.x;
      |                                                 ^~~~~~~~~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
